--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -6,12 +6,23 @@
                 android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/titleView"
+        android:id="@+id/amountView"
+        android:textColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textAppearance="?android:attr/textAppearanceLarge" >
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignEnd="@+id/statusCheckBox">
+    </TextView>
+    <TextView
+        android:id="@+id/titleView"
+        android:textColor="@color/colorPrimary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_toRightOf="@id/amountView"
+        android:layout_alignEnd="@+id/priorityView"
+        >
     </TextView>
 
     <TextView
