--- a/app/src/main/res/layout/footer_view.xml
+++ b/app/src/main/res/layout/footer_view.xml
@@ -2,9 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/footerView"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
+          android:layout_height="50dp"
           android:gravity="center_horizontal"
-          android:text="@string/add_new_todo_item_string"
+          android:text="@string/add_new_expense_string"
           android:textSize="24sp" >
-
 </TextView>
