--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -1,67 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/RelativeLayout1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/colorView"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_weight="0.01"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        />
 
     <TextView
         android:id="@+id/amountView"
-        android:textColor="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_weight="0.25"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_alignEnd="@+id/typeView">
-    </TextView>
+        android:textColor="@color/colorPrimary"
+        />
+
     <TextView
         android:id="@+id/titleView"
-        android:textColor="@color/colorPrimary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_weight="0.6"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_toRightOf="@id/amountView"
-        android:layout_alignEnd="@+id/priorityView"
-        >
-    </TextView>
-
-    <TextView
-        android:id="@+id/TypeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/typeView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/type_string" >
-    </TextView>
-
-    <TextView
-        android:id="@+id/typeView"
-        android:layout_marginTop="25dp"
-        android:layout_width="70dip"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/TypeLabel"
-        android:layout_marginLeft="@dimen/activity_vertical_margin">
-    </TextView>
-
-    <TextView
-        android:id="@+id/PriorityLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/typeView"
-        android:layout_alignTop="@+id/TypeLabel"
-        android:layout_toLeftOf="@+id/priorityView"
-        android:text="@string/category_str" >
-    </TextView>
+        android:textColor="@color/colorPrimary"
+        />
 
     <TextView
         android:id="@+id/priorityView"
-        android:layout_width="50dip"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/typeView"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/TypeLabel"
-        android:layout_marginLeft="@dimen/activity_vertical_margin">>
-    </TextView>
-</RelativeLayout>
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_weight="0.15"
+        android:textAppearance="?android:attr/textAppearanceSmallInverse"
+        android:textColor="@color/colorPrimary"
+        />
+    <!-- get rid of this one -->
+    <TextView
+        android:id="@+id/typeView"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_weight="0"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/colorPrimary"
+        android:visibility="invisible"
+        />
+</LinearLayout>
