--- a/app/src/main/res/layout/footer_view.xml
+++ b/app/src/main/res/layout/footer_view.xml
@@ -3,7 +3,8 @@
           android:id="@+id/footerView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:gravity="center_horizontal"
+          android:gravity="left"
           android:text="@string/add_new_expense_string"
-          android:textSize="24sp" >
-</TextView>
+          android:textSize="35sp"
+          android:textColor="@color/colorPrimaryDark"
+    />
