--- a/app/src/main/res/layout/header_view.xml
+++ b/app/src/main/res/layout/header_view.xml
@@ -5,5 +5,6 @@
           android:inputType="numberDecimal"
           android:gravity="left"
           android:textSize="35sp"
-          android:textColor="@color/colorPrimaryDark">
-</TextView>
+          android:textColor="@color/colorPrimaryDark"
+
+    />
