--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="text_size_add_entry_textview">50dp</dimen>
     <dimen name="text_size_add_entry_radio">20dp</dimen>
     <dimen name="text_size_add_entry_spinner">20dp</dimen>
+    <dimen name="text_size_footer">30dp</dimen>
+    <dimen name="text_size_header">50dp</dimen>
 </resources>
