--- a/app/src/main/res/layout/entry.xml
+++ b/app/src/main/res/layout/entry.xml
@@ -8,7 +8,7 @@
         android:id="@+id/colorView"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_weight="0.01"
+        android:layout_weight="0.02"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/colorPrimary"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -19,6 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_weight="0.25"
+        android:inputType="numberDecimal"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/colorPrimary"
         />
@@ -28,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_weight="0.6"
+        android:inputType="textNoSuggestions"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/colorPrimary"
         />
@@ -37,6 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_weight="0.15"
+        android:inputType="textNoSuggestions"
         android:textAppearance="?android:attr/textAppearanceSmallInverse"
         android:textColor="@color/colorPrimary"
         />
