--- a/app/src/main/res/layout/footer_view.xml
+++ b/app/src/main/res/layout/footer_view.xml
@@ -3,8 +3,9 @@
           android:id="@+id/footerView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:gravity="left"
+          android:gravity="center"
           android:text="@string/add_new_expense_string"
-          android:textSize="35sp"
-          android:textColor="@color/colorPrimaryDark"
+          android:background="@color/colorPrimaryDark"
+          android:textSize="@dimen/text_size_footer"
+          android:textColor="@color/colorWhite"
     />
